tests/more-tests/type_error/test_type_error.py
from pysd import external

__pysd_version__ = "3.0.0"
_root = './'

external.ExtData('input.xlsx', 'Sheet1', '5', 'B6')
